--- a/templates/result.html
+++ b/templates/result.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+ 
+  <head>
+    <title>URL Shortner</title>
+	  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script>
+	    function myFunction() {
+	      var copyText = document.getElementById("mylink");
+	      copyText.select();
+	      document.execCommand("copy");
+	    }
+	  </script>
+  </head>
+  
+  <body>
+    <center>
+        <div class="button_box">
+	        <center><h2>Your Generated Result</h2></center>
+	      <br>
 
+        <form class="form-wrapper-2 cf" action="/" method="post">
+	        <input type="text" value="{{ tiny_url }}" id="mylink" required autofocus>
+	        <button onclick="myFunction()">Copy</button>
+	      </form>
+
+      </div>
+    </center>
+  </body>
+
+</html>
